Copy project structure from other libraries. Attempt to separate source from demo app

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -28,3 +28,27 @@ body {
   user-select: none;           /* Non-prefixed version, currently
                                   not supported by any browser */
 }
+
+.circle {
+  fill: blue;
+}
+.circle--positive {
+  fill: green;
+}
+.circle--negative {
+  fill: red;
+}
+
+line.train {
+  stroke: purple;
+}
+
+line.division {
+  stroke: purple;
+}
+line.division--full {
+  stroke: orange;
+}
+line.division--user-defined {
+  stroke: red;
+}
