Refactor chart to use more centralized update method.
Remove hard-coding of stroke and stroke width since it can be specified in CSS.
Untrack /demo folder since it's contents is generated by gulp task
Change to scoped package.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -40,15 +40,27 @@ body {
 }
 
 line.train {
+  stroke-width: 1;
+}
+
+line.train {
   stroke: purple;
+}
+line.train:last-child {
+  stroke-width: 2;
+}
+line.train:not(:last-child) {
+  opacity: 0.7;
 }
 
 line.division {
   stroke: purple;
+  stroke-width: 2;
 }
 line.division--full {
   stroke: orange;
 }
 line.division--user-defined {
   stroke: red;
+  stroke-width: 3;
 }
